<resources>
    <string name="button_categories_text">Перейти к категориям</string>
    <string name="home_title">Главная</string>
    <string name="main_title">Привет!</string>
    <string name="main_subtitle">Время прокачать словарный запас</string>
    <string name="action_repeat_title">Повторение слов</string>
    <string name="action_repeat_desc">Закрепи изученные слова быстрой тренировкой.</string>
    <string name="action_repeat_cta">Начать повторение</string>
    <string name="action_collection_title">Учить подборку</string>
    <string name="action_collection_desc">Собери набор слов по теме и проходи курс.</string>
    <string name="action_collection_cta">Выбрать подборку</string>
    <string name="action_add_word_title">Добавить слово</string>
    <string name="action_add_word_desc">Нашли новое слово? Добавьте его в свой словарь.</string>
    <string name="action_add_word_cta">Добавить слово</string>
    <string name="app_name">Grable</string>
</resources>


